fix: overflow: scroll for output-cell and fix stream docs

--- a/public/css/notebook.css
+++ b/public/css/notebook.css
@@ -138,6 +138,9 @@
 
     /* allow newlines/etc. */
     white-space: pre;
+
+    max-height: 300px;
+    overflow: scroll;
 }
 
 /* pseudo selector for ensuring not displayed when empty.*/
